$Date$

This file containts information about visible changes in
sedarVegan for developers (others and yourself). Add new entries to the 
top of the file using version numbering defined in DESCRIPTION. 

Version 0.1-0 (opened June 3, 2008)

	* chooseCN: veganified Jombart's chooseCN function. The major
	changes were that the function is silent and does not ask user
	interaction, and that plotting (and printing) is separated from
	calculation. I made this change only to demonstrate the difference
	in vegan and ade4 programming style, and the proper function
	really is Thibaut Jombert's code. Function uses eiter ade4 or
	vegan for minimum spanning tree so that it works with either
	package. 
	
version 0.0-1 (closed June 2, 2008)

	* setting up sedarVegan with only one function: spantree2neig
          to translate vegan::spantree objects to ade4::neig objects. 